--- a/insight-stage-master1/composer.json
+++ b/insight-stage-master1/composer.json
@@ -15,6 +15,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
+        "rudrarajiv/flipbooklaravel": "dev-master",
+        "spatie/pdf-to-image": "^2.1",
         "tcg/voyager": "^1.4"
     },
     "require-dev": {
