--- a/insight-stage-master1/composer.json
+++ b/insight-stage-master1/composer.json
@@ -9,8 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "calcinai/php-imagick": "^0.1.2",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
+        "gravitymedia/ghostscript": "1.0.x-dev",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
