--- a/insight-stage-master1/composer.json
+++ b/insight-stage-master1/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
+        "org_heigl/ghostscript": "^2.3",
         "rudrarajiv/flipbooklaravel": "dev-master",
         "spatie/pdf-to-image": "^2.1",
         "tcg/voyager": "^1.4"
